[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[project]
name = "beeg_api"
version = "1.1"
description = "A Python API for the Porn Site beeg.com"
requires-python = ">=3.9"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Johannes Habel", email = "EchterAlsFake@proton.me" }
]
dependencies = [
    "eaf_base_api",
    "httpx",
    "h2"
]
classifiers = [
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/EchterAlsFake/beeg_api"

[project.optional-dependencies]
av = ["av; python_version >= '3.10'"]

[tool.uv.build-backend]
module-root = ""
